chore: fix contrast for highlighted lines in code blocks

--- a/src/css/dark-mode.scss
+++ b/src/css/dark-mode.scss
@@ -14,7 +14,7 @@ html[data-theme="dark"] {
   --ifm-menu-color-active: var(--ifm-color-primary);
   --ifm-heading-color: #e0dcd7;
   --ifm-breadcrumb-item-background-active: var(--ifm-dropdown-background-color);
-  --docusaurus-highlighted-code-line-bg: #666666;
+  --docusaurus-highlighted-code-line-bg: #0c403f;
   --ifm-menu-color-background-active: var(--ifm-dropdown-background-color);
   --ifm-navbar-link-color: #ffffff;
   --ifm-navbar-background-color: var(--ifm-background-color);
